--- a/calculator.html
+++ b/calculator.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="calculator.css">
 </head>
 <body>
-
+/* this is a calculator*/
     <div class="calculator">
         <input  class="display" id="display">0</input>
         <div class="buttons">
